...
      setLoading(prevState => ({...prevState, user: false}));
      await enterApp();
    }
  }

  return (
    <View style={styles.wrapper} testID={'sign_up_page'}>
      <StatusBar translucent={true} backgroundColor="transparent" />
      <Text style={[textStyles.blueJosefinHeading]}>Sign Up</Text>
      <View style={styles.formContainer}>
        <View style={styles.namesContainer}>
          <FormField
            style={[styles.subNameContainer, styles.subNameContainerLeft]}
            title={'First Name'}
            placeholder={'Jane'}
            setField={setFirstName}
            type={'name'}
            value={first_name}
            testID={'sign_up_page_first_name'}
          />
          <FormField
            style={[styles.subNameContainer]}
            title={'Last Name'}
            placeholder={'Doe'}
            setField={setLastName}
            type={'name'}
            value={last_name}
            testID={'sign_up_page_last_name'}
          />
        </View>
        <FormField
          style={styles.element}
          title={'Email'}
          placeholder={'janedoe@gmail.com'}
          setField={setEmail}
          type={'email'}
          value={email}
          testID={'sign_up_page_email'}
        />
        <FormField
          style={styles.element}
          title={'Password'}
          placeholder={''}
          setField={setPassword}
          type={'password'}
          value={password}
          testID={'sign_up_page_password'}
        />
        <FormField
          style={styles.element}
          title={'Confirm Password'}
          placeholder={''}
          setField={setPasswordConfirmation}
          type={'password'}
          value={password_confirmation}
          testID={'sign_up_page_confirm_password'}
        />
        <Text
          style={[textStyles.bluePoppinsBody, styles.hyperlink]}
          onPress={() => navigation.navigate('LogIn')}>
          Already have an account? Log in
        </Text>
      </View>

      <View style={styles.buttonContainer}>
        <CustomButton
          text={'Create Account'}
          onPress={registerUser}
          priority={'primary'}
          style={styles.button}
        />
      </View>
    </View>
...
