...
  function proceedToSignUp() {
    navigation.navigate('SignUp');
  }

  const {currentPage: pageIndex} = sliderState;
  return (
    <View style={styles.wrapper} testID={'welcome_pages'}>
      <StatusBar translucent={true} backgroundColor="transparent" />
      <ScrollView
        style={{display: 'flex'}}
        horizontal={true}
        scrollEventThrottle={16}
        pagingEnabled={true}
        showsHorizontalScrollIndicator={false}
        onScroll={(event: any) => {
          setSliderPage(event);
        }}
        testID={'welcome_pages_scrollview'}
      >
        <View style={styles.component} testID={'welcome_page1'}>
          <Text style={[textStyles.blueJosefinHeading, styles.title]}>
            Welcome to Slurp!
          </Text>
          <CoffeeShopSvg style={[styles.circle]} />
          <Text style={[textStyles.bluePoppinsMediumBody, styles.text]}>
            All your favourite local coffee shops in one place. Order ahead and
            skip the line!
          </Text>
        </View>
        <View style={styles.component} testID={'welcome_page2'}>
          <Text style={[textStyles.blueJosefinHeading, styles.title]}>
            Why Slurp?
          </Text>
          <CoffeeCupSvg style={[styles.circle]} />
          <Text style={[textStyles.bluePoppinsMediumBody, styles.text]}>
            Our mission is to support independent, sustainable coffee shops in
            your area. In a rush? Don't head into a standard chain store just
            yet. Let us find the perfect coffee shop for your needs. Order now
            and enjoy your favourite drink as soon as you walk in!
          </Text>
        </View>
        <View style={styles.component} testID={'welcome_page3'}>
          <Text style={[textStyles.blueJosefinHeading, styles.title]}>
            Become a Slurpy today!
          </Text>
          <CoffeeBeanSvg style={[styles.circle, {marginTop: 5}]} />
          <Text style={[textStyles.bluePoppinsMediumBody, styles.text]}>
            Enjoy the best coffee from the best places. Explore your tastes with
...
